--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -6,13 +6,27 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.MainMenuActivity"
-    tools:showIn="@layout/activity_main_menu"
-    android:background="@mipmap/temp_login_bckgrnd">
+    tools:showIn="@layout/activity_main_menu">
 
-    <View
+    <!--View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/opaqueBlack"/>
+        android:background="@color/opaqueBlack"/ -->
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimary"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:menu="@menu/bottom_navigation_menu"
+        />
+</FrameLayout>
+    <!--
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,5 +88,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
+ -->
 </RelativeLayout>
