--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#E83136</color>
+    <color name="colorPrimaryDark">#C52631</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
     <color name="colorDivider">#B6B6B6</color>
     <color name="opaqueBlack">#B2000000</color>
     <color name="brightGrey">#A0A0A0</color>
+    <color name="white">#E5E5E5</color>
+
 </resources>
