--- a/app/src/main/res/layout/activity_customization_finish.xml
+++ b/app/src/main/res/layout/activity_customization_finish.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.CustomizationFinishActivity">
+    tools:context=".view.activities.customization.CustomizationFinishActivity">
 
     <TextView
         android:layout_width="wrap_content"
