--- a/app/src/main/res/layout/activity_meals_number_customization.xml
+++ b/app/src/main/res/layout/activity_meals_number_customization.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.MealsNumberCustomizationActivity">
+    tools:context=".view.activities.customization.MealsNumberCustomizationActivity">
 
     <TextView
         android:layout_width="match_parent"
