--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.RecipesActivity">
-    <LinearLayout
+    tools:context=".view.activities.content.RecipesActivity">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/randomRecipesRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/recipesContainerLayout"/>
+        android:layout_height="wrap_content"/>
+
+
     </ScrollView>
 
