--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -5,88 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.MainMenuActivity"
+    tools:context=".view.activities.menus.MainMenuActivity"
     tools:showIn="@layout/activity_main_menu">
 
     <!--View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/opaqueBlack"/ -->
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mainMenuFragmentContainer"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/bottom_navigation"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
         app:menu="@menu/bottom_navigation_menu"
         />
-</FrameLayout>
-    <!--
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="7dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_margin="3dp"
-                android:layout_width="match_parent"
-                android:textColor="#000000"
-                android:textSize="18dp"
-                android:layout_height="150dp"
-                android:id="@+id/yourWeekBtn"
-                android:text="@string/your_week_btn"
-                android:layout_weight="1"
-                android:background="@mipmap/calendar_thumbnail"/>
-            <Button
-                android:textColor="#FFFFFF"
-                android:textSize="18dp"
-                android:layout_margin="3dp"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:id="@+id/yourDietBtn"
-                android:text="@string/your_diet_btn"
-                android:layout_weight="1"
-                android:background="@mipmap/diet_thumbnail"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:textColor="#000000"
-                android:textSize="18dp"
-                android:layout_margin="3dp"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:id="@+id/recipiesBtn"
-                android:text="@string/recipies_btn"
-                android:layout_weight="1"
-                android:background="@mipmap/recipies_thumbnail"/>
-            <Button
-                android:textColor="#FFFFFF"
-                android:textSize="18dp"
-                android:layout_margin="3dp"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:id="@+id/groceriesBtn"
-                android:text="@string/groceries_btn"
-                android:layout_weight="1"
-                android:background="@mipmap/groceries_thumbnail"/>
-        </LinearLayout>
-
-    </LinearLayout>
- -->
 </RelativeLayout>
