--- a/app/src/main/res/layout/fragment_recipe_img.xml
+++ b/app/src/main/res/layout/fragment_recipe_img.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RecipeImgFragment">
+    tools:context=".view.fragments.RecipeImgFragment">
 
     <ImageView
         android:layout_width="match_parent"
