--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.content.RecipesActivity">
+    tools:context=".view.activities.recipes.RecipesActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/randomRecipesRV"
         android:layout_width="match_parent"
