--- a/app/src/main/res/layout/activity_basic_auth.xml
+++ b/app/src/main/res/layout/activity_basic_auth.xml
@@ -55,4 +55,14 @@
         android:text="Show token ?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="214dp"
+        android:layout_marginBottom="126dp"
+        android:text="wyjeb token"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
