Login UI added, request auth in progress

--- a/app/src/main/res/layout/fragment_cookbook_screen.xml
+++ b/app/src/main/res/layout/fragment_cookbook_screen.xml
@@ -10,90 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recipesByCategoriesLayoutContainer"
-        android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeCategoryTitleBarTV"
-        style="@style/listHeaderText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Selected for you"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/randomRecipesRV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeCategoryTitleBarTV2"
-        style="@style/listHeaderText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Popular in your area"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomRecipesRV2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeCategoryTitleBarTV3"
-        style="@style/listHeaderText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Italian cuisine"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomRecipesRV3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeCategoryTitleBarTV4"
-        style="@style/listHeaderText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Asian cuisine"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomRecipesRV4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeCategoryTitleBarTV5"
-        style="@style/listHeaderText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Vege recipes"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomRecipesRV5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeCategoryTitleBarTV6"
-        style="@style/listHeaderText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Desserts"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/randomRecipesRV6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-    </LinearLayout>
+        android:orientation="vertical"/>
 </ScrollView>
