--- a/app/src/main/res/layout/activity_basic_auth.xml
+++ b/app/src/main/res/layout/activity_basic_auth.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".connection.auth.model.BasicAuth">
+    tools:context=".auth.model.BasicAuth">
 
     <TextView
         android:id="@+id/textView"
