--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".connection.auth.model.test">
+    tools:context=".auth.model.test">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
