--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.activities.login.LoginActivity"
+    tools:context=".view.activities.authorization.LoginActivity"
     tools:showIn="@layout/activity_login"
 
     android:background="@mipmap/temp_login_bckgrnd">
@@ -29,12 +29,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/loginEt"
+            android:textColor="@color/white"
             android:textColorHint="@color/brightGrey"
             android:hint="@string/login_et"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/passwordEt"
+            android:textColor="@color/white"
             android:textColorHint="@color/brightGrey"
             android:hint="@string/password_et"/>
         <Button
