--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.authorization.LoginActivity">
+    tools:context=".view.activities.authorization.RegistrationActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -38,14 +38,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.13"
+        app:layout_constraintVertical_bias="0.26"
         app:layout_constraintWidth_percent="0.6" />
 
     <TextView
         style="@style/normalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="188dp"
         android:text="@string/password"
         app:layout_constraintBottom_toTopOf="@+id/passwordEt"
         app:layout_constraintStart_toStartOf="@+id/passwordEt" />
@@ -62,69 +61,38 @@
         app:layout_constraintTop_toBottomOf="@+id/loginEt"
         app:layout_constraintWidth_percent="0.6" />
 
-    <Button
-        android:id="@+id/loginBtn"
-        style="@style/Widget.MaterialComponents.Button"
+    <EditText
+        android:id="@+id/confirmPasswordET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/login_btn"
-        android:textColor="@color/white"
-        android:textSize="18sp"
+        android:ems="10"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEt"
-        app:layout_constraintWidth_percent="0.45" />
+        app:layout_constraintWidth_percent="0.6" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/confirmPasswordTV"
         style="@style/normalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/no_account"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/loginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
-
-    <TextView
-        android:id="@+id/createAccountTV"
-        style="@style/hyperlink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="startCreateAccountActivity"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/create_one"
-        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
-
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:text="@string/confirm_password"
+        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordET"
+        app:layout_constraintStart_toStartOf="@+id/confirmPasswordET" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
+        android:id="@+id/button7"
         style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/continue_without_login"
+        android:layout_marginTop="32dp"
+        android:text="@string/create_account"
         android:textColor="@color/white"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordET" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
