--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="opaqueBlack">#B2000000</color>
     <color name="brightGrey">#A0A0A0</color>
     <color name="white">#E5E5E5</color>
+    <color name="hyperlink_blue">#0080FF</color>
 
 </resources>
