--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,29 +15,36 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="buttonText">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
     </style>
     <style name="listHeaderText">
-        <item name="android:textSize">24dp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="RecipeTitle">
-        <item name="android:textSize">28dp</item>
+        <item name="android:textSize">2sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="listElementText">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="hyperlink">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/hyperlink_blue</item>
     </style>
     <style name="normalText">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="smallText">
+        <item name="android:textSize">11sp</item>
     </style>
     <style name="recipeListElement">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:padding">10dp</item>
     </style>
     <style name="recipeImgTextOverlay">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/colorBlack</item>
     </style>
 
