--- a/app/src/main/res/layout/activity_diet_customization.xml
+++ b/app/src/main/res/layout/activity_diet_customization.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.activities.customization.DietCustomizationActivity">
+    tools:context=".view.activities.personalization.DietCustomizationActivity">
 
     <TextView
         android:layout_width="wrap_content"
