--- a/app/src/main/res/layout/activity_servings_customization.xml
+++ b/app/src/main/res/layout/activity_servings_customization.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".view.activities.customization.ServingsCustomizationActivity">
+    tools:context=".view.activities.personalization.ServingsCustomizationActivity">
 
     <TextView
         android:layout_width="match_parent"
