--- a/app/src/main/res/layout/activity_start_customization.xml
+++ b/app/src/main/res/layout/activity_start_customization.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.customization.StartCustomizationActivity">
+    tools:context=".view.activities.personalization.StartCustomizationActivity">
 
     <TextView
         style="@style/listElementText"
