--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -70,7 +70,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/portionsTV2" />
+            app:layout_constraintTop_toBottomOf="@+id/mealsPerMealPlanTV" />
 
         <TextView
             android:id="@+id/emailLabelTV"
@@ -220,7 +220,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:text="@string/cooking_time_label"
-            app:layout_constraintBaseline_toBaselineOf="@+id/portionsTV3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/preferedCookingTimeTV"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -235,24 +235,24 @@
             app:layout_constraintTop_toTopOf="@+id/subtractPortionsBtn" />
 
         <TextView
-            android:id="@+id/portionsTV3"
+            android:id="@+id/preferedCookingTimeTV"
             style="@style/listHeaderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
-            android:text="&lt;50 min"
-            app:layout_constraintStart_toEndOf="@+id/subtractCookingTimeBtn"
+            android:text="50"
+            app:layout_constraintStart_toEndOf="@+id/ampersandTV"
             app:layout_constraintTop_toTopOf="@+id/subtractCookingTimeBtn" />
 
         <TextView
-            android:id="@+id/portionsTV2"
+            android:id="@+id/mealsPerMealPlanTV"
             style="@style/listHeaderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="5"
-            app:layout_constraintEnd_toStartOf="@+id/addPortionsBtn2"
+            app:layout_constraintEnd_toStartOf="@+id/addMealsPerMealPlanBtn"
             app:layout_constraintStart_toEndOf="@+id/subtractMealsBtn"
             app:layout_constraintTop_toTopOf="@+id/subtractMealsBtn" />
 
@@ -292,21 +292,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/ic_add_red_18dp"
-            app:layout_constraintStart_toStartOf="@+id/addPortionsBtn3"
-            app:layout_constraintTop_toBottomOf="@+id/addPortionsBtn3" />
+            app:layout_constraintStart_toStartOf="@+id/increaseCookingTimeBtn"
+            app:layout_constraintTop_toBottomOf="@+id/increaseCookingTimeBtn" />
 
         <Button
-            android:id="@+id/addPortionsBtn3"
+            android:id="@+id/increaseCookingTimeBtn"
             android:layout_width="24dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/ic_add_red_18dp"
-            app:layout_constraintStart_toEndOf="@+id/portionsTV3"
+            app:layout_constraintStart_toEndOf="@+id/minutesLabelTV"
             app:layout_constraintTop_toBottomOf="@+id/mealsPreferencesTV" />
 
         <Button
-            android:id="@+id/addPortionsBtn2"
+            android:id="@+id/addMealsPerMealPlanBtn"
             android:layout_width="24dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -513,6 +513,28 @@
             android:text="75kg"
             app:layout_constraintStart_toStartOf="@+id/barrier4"
             app:layout_constraintTop_toBottomOf="@+id/heightTV" />
+
+        <TextView
+            android:id="@+id/ampersandTV"
+            style="@style/listHeaderText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="&lt;"
+            app:layout_constraintBottom_toBottomOf="@+id/preferedCookingTimeTV"
+            app:layout_constraintStart_toEndOf="@+id/subtractCookingTimeBtn"
+            app:layout_constraintTop_toTopOf="@+id/preferedCookingTimeTV" />
+
+        <TextView
+            android:id="@+id/minutesLabelTV"
+            style="@style/listHeaderText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="min"
+            app:layout_constraintBottom_toBottomOf="@+id/preferedCookingTimeTV"
+            app:layout_constraintStart_toEndOf="@+id/preferedCookingTimeTV"
+            app:layout_constraintTop_toTopOf="@+id/preferedCookingTimeTV" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
