--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,5 +47,12 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/colorBlack</item>
     </style>
+    <style name="recipe_thumbnail_text">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="loading_dialog_text">
+        <item name="android:textSize">18sp</item>
+    </style>
 
 </resources>
