--- a/app/src/main/res/layout/activity_cooking_steps.xml
+++ b/app/src/main/res/layout/activity_cooking_steps.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".view.activities.recipes.CookingStepsActivity">
 
+    <TextView
+        android:id="@+id/textView10"
+        style="@style/listHeaderText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/cooking_steps2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/cookingStepsContainerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
