--- a/app/src/main/res/layout/activity_cooking_steps.xml
+++ b/app/src/main/res/layout/activity_cooking_steps.xml
@@ -28,4 +28,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"></LinearLayout>
+
+    <Button
+        android:id="@+id/cookingModeBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/cooking_mode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cookingStepsContainerLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
